# IEEE-Site

./: README.md  main.py  pyproject.toml  vercel.json
api/: index.py  test.py
static/: index.html
static/assets/css/: main.css
static/assets/js/: main.js
templates/: index.html
