[project]
name = "ieee-site"
version = "0.1.0"
description = "IEEE Site with FastAPI backend and static frontend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
